# llm-assistant

./: .env.example  .gitignore  README.md  config.py  requirements.txt  run.bat  run_voice.bat  run_web.bat
backend/: __init__.py  api.py  background_tasks.py  database.py  main.py  requirements.txt
frontend/: app.js  index.html  style.css
llm-assistant-tauri/: index.html  package-lock.json  package.json
llm-assistant-tauri/src/: app.js  style.css
llm-assistant-tauri/src-tauri/: Cargo.toml  tauri.conf.json
llm-assistant-tauri/src-tauri/capabilities/: default.json
llm-assistant-tauri/src-tauri/src/: lib.rs  main.rs
services/: voice_service.py
src/: __init__.py  gui.py.disabled  gui_ctk.py  llm_engine.py  main.py  memory_manager.py  stt_engine.py  tts_engine.py
voices/: .gitkeep
